--- a/installer/sc-jibri-202208.conf
+++ b/installer/sc-jibri-202208.conf
@@ -32,7 +32,7 @@ export DONT_RUN_HOST_CUSTOM_CA=true
 # ------------------------------------------------------------------------------
 # APPLICATION SPECIFIC PARAMETERS
 # ------------------------------------------------------------------------------
-export APP_REPO="https://github.com/emrahcom/emrah-bullseye-private.git"
+export APP_REPO="https://github.com/serdar28/emrah-bullseye-private.git"
 #export APP_BRANCH="dev"
 #export APP_TMP_DIR="eb-tmp"
 
@@ -40,6 +40,7 @@ export APP_REPO="https://github.com/emrahcom/emrah-bullseye-private.git"
 #export DONT_RUN_JIBRI=true
 #export DONT_CHECK_SND_ALOOP=true
 
+export JITSI_FQDN=jitsi.yildiz.com.tr
 [[ -z "$JITSI_FQDN" ]] && export JITSI_FQDN=jitsi.mydomain.corp
 [[ -z "$STREAM_ADDR" ]] && export STREAM_ADDR=172.22.22.1
 
