--- a/installer/sc-jitsi-202208.conf
+++ b/installer/sc-jitsi-202208.conf
@@ -32,7 +32,7 @@
 # ------------------------------------------------------------------------------
 # APPLICATION SPECIFIC PARAMETERS
 # ------------------------------------------------------------------------------
-export APP_REPO="https://github.com/emrahcom/emrah-bullseye-private.git"
+export APP_REPO="https://github.com/serdar28/emrah-bullseye-private.git"
 #export APP_BRANCH="dev"
 #export APP_TMP_DIR="eb-tmp"
 
@@ -42,6 +42,9 @@ export APP_REPO="https://github.com/emrahcom/emrah-bullseye-private.git"
 #export REINSTALL_JITSI_IF_EXISTS=true
 #export DONT_RUN_JIBRI=true
 #export DONT_RUN_JITSI_CUSTOMIZATION=true
+
+export JITSI_FQDN=jitsi.yildiz.com.tr
+export TURN_FQDN=turn.yildiz.com.tr
 
 [[ -z "$JITSI_FQDN" ]] && export JITSI_FQDN=jitsi.mydomain.corp
 [[ -z "$TURN_FQDN" ]] && export TURN_FQDN=turn.mydomain.corp
